--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,6 +47,14 @@ select{
 
 }
 
+.reset{
+  background-color: rgb(54, 54, 54);
+  padding: 0.75rem;
+  cursor: pointer;
+  border: none;
+  width: 45px;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
