--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,7 +53,10 @@ select{
   cursor: pointer;
   border: none;
   width: 45px;
+  margin-right: 0.5rem;
 }
+
+
 
 @media (prefers-color-scheme: dark) {
   html {
